--- a/README.org
+++ b/README.org
@@ -163,6 +163,10 @@ Usługi, które zostały napisane przez nas należy uruchomić bezpośrednio prz
 python FOLDER/main.py
 #+end_src
 Gdzie =FOLDER= należy zastąpić odpowiednią nazwą.
+
+W celu przystosowania projektu do własnej infrastruktury należy uruchomić Promehteusa z wybranymi eksporterami zgodnie z [[https://prometheus.io/docs/prometheus/latest/installation/][dokumentacją[fn::https://prometheus.io/docs/prometheus/latest/installation/]]] wybraną metodą.
+Ponad to należy zmienić w pliku =etls/app.py= adresy IP, hasła oraz nazwy bazy danych czy użytkowników zgodnie z ustawieniami.
+
 * Implementacja
 ** Generowanie danych
 ** ETL
@@ -393,6 +397,15 @@ def insert_column(conn, colnames: Iterable[str]) -> None:
     except (Exception, psycopg2.DataError) as error:
         sys.stderr.write(f"DB ERROR (insert_column) {str(error)}")
     conn.commit()
+    cur = conn.cursor()
+    for i in colnames:
+        cur.execute(
+            f"ALTER TABLE IF EXISTS measurements ADD COLUMN IF NOT EXISTS {i} STRING;"
+        )
+    cur.close()
+except (Exception, psycopg2.DataError) as error:
+    sys.stderr.write(f"DB ERROR (insert_column) {str(error)}")
+conn.commit()
 #+end_src
 
 Zanim wprowadzimy dane do bazy, musimy najpierw utworzyć tabelę. Służy do tego funkcja ~create_table~,
@@ -418,7 +431,10 @@ należące do nich wizualizacje.
 
 + /Machine/
 Na tym dashboardzie prezentujemy kilka ogólnych informacji na temat monitorowanej maszyny, w sposób tekstowy i wizualny.
+#+attr_latex: :float nil
+
 [[file:screenshots/1-machine.JPG]]
+
 Widzimy, że po prawej stronie u góry możemy dostosować okno czasowe, które chcemy oglądać, dla całego dashboardu.
 Na tym dashboardzie mamy dwa panele, gdzie panel po lewej stronie zawiera tekstową prezentację danych, a panel
 po prawej stronie zawiera wykres szeregu czasowego. Panel tekstowy przedstawia podstawowe parametry maszyny,
@@ -430,12 +446,20 @@ należało się spodziewać.
 
 + /Container/
 Dashboard ten przedstawia podsumowania statystyk dotyczących pracy kontenerów.
+
+#+attr_latex: :float nil
 [[file:screenshots/2-container-1.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/3-container.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/4-container.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/5-container.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/7-container.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/8-container.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/9-container.JPG]]
 Na początku ogólne informacje, jak czas startu czy zużycie procesora. Następnie informacje (niezbyt ciekawe)
 na temat systemu plików kontenera. Następnie wizualizacje zużycia pamięci (widzimy na przykład na panelu /Memory failures/,
@@ -445,16 +469,20 @@ sieci kontenerowej. Widzimy znaczny wzrost otrzymanych pakietów pod koniec dzia
 
 + /Traefik - reverse proxy/
 Tutaj przygotowaliśmy wizualizacje danych dotyczących działania reverse proxy.
+#+attr_latex: :float nil
 [[file:screenshots/10-traefik.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/11-traefik.JPG]]
+#+attr_latex: :float nil
 [[file:screenshots/12-traefik.JPG]]
 Możemy zauważyć, że ostatnia próbka, która zawierała informację na ten temat, mówiła o 1 otwartym połączeniu /entrypoint/
 oraz braku otwartych połączeń /service/. Następnie wykresy metryk /Request duration/ - /sum/ oraz /count/ (tutaj
 nie agregowaliśmy danych, wyświetliliśmy je w czystej postaci.) Możemy zobaczyć całkowite liczby zapytań.
 
-+ /Miscellaneous//
++ /Miscellaneous/
 Na tym dashboardzie dokonaliśmy kilku podsumowań dotyczących dodatkowych atrybutów, jakie system przydzielał
 niektórym próbkom.
+#+attr_latex: :float nil
 [[file:screenshots/13-miscellaneous.JPG]]
 Tutaj jedyną możliwą agregacją było zliczanie /COUNT/, ponieważ wartości /value/ mogły dotyczyć różnych metryk.
 Zależało nam jedynie na zliczeniu i porównaniu ilości rekordów, które miały dane wartości danego atrybutu.
